Add auto Compelete and Auto SUggest at input field

--- a/src/style/home.module.css
+++ b/src/style/home.module.css
@@ -2,7 +2,13 @@
     background-color: white;
     margin: 20px auto;
     width: 350px;
-    height: 650px;
+    height: 670px;
     border-radius: 30px;
     padding-top: 10px;
+}
+Autocomlete{
+    height: 30px;
+    border: none;
+    background-color: aqua;
+    background: fixed;
 }
