--- a/src/style/input.module.css
+++ b/src/style/input.module.css
@@ -1,14 +1,14 @@
 .input_box{
     margin: 10px 20px;
     box-shadow: 5px 5px 4px 4px #f0f0f0 ;
-    height: 40px;
+    height: 55px;
     width: 300px;
     display: flex;
     padding: 2px;
     border-radius: 10px;
 }
 .location_icon{
-    margin: 10px;
+    margin:20px 10px;
 }
 .input_box > input{
     border: none;
@@ -20,4 +20,9 @@
 .input_box >button{
     border: none;
     background: white;
+    border-radius: 5px;
+}
+.input_box> button:hover{
+    border: none;
+    background-color: darkgray;
 }
