--- a/src/style/input.module.css
+++ b/src/style/input.module.css
@@ -9,6 +9,16 @@
 }
 .location_icon{
     margin:20px 10px;
+    cursor: pointer;
+}
+.location_icon:hover{
+    margin: 5px 5px;
+    border: none;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    color: white;
+    background-color: #a6d2d7;
 }
 .input_box > input{
     border: none;
@@ -20,9 +30,12 @@
 .input_box >button{
     border: none;
     background: white;
-    border-radius: 5px;
+
 }
 .input_box> button:hover{
     border: none;
-    background-color: darkgray;
+    border-radius: 40px;
+    width: 75px;
+    color: white;
+    background-color: #a6d2d7;
 }
