--- a/src/style/globel.css
+++ b/src/style/globel.css
@@ -1,21 +1,27 @@
-*{
-    margin-top: 0px;
+* {
+  margin-top: 0px;
 }
-.bold{
-    font-weight: 600;
+.bold {
+  font-weight: 600;
 }
-.dark{
-    font-weight: 900;
+.dark {
+  font-weight: 900;
 }
-.light{ 
-    font-weight: 300;
+.light {
+  font-weight: 300;
 }
-.sup{
-   font-size: 12px; 
+.sup {
+  font-size: 12px;
 }
-.yellow{
-    color: yellow;
+.yellow {
+  color: yellow;
 }
-.deg{
-    font-size: 35px;
+.orange {
+  color: #ec6e4c;
+}
+.deg {
+  font-size: 35px;
+}
+body {
+  background-image: linear-gradient(to bottom, #80d4e6, #ccd1cb);
 }
