--- a/src/style/input.module.css
+++ b/src/style/input.module.css
@@ -6,6 +6,9 @@
     display: flex;
     padding: 2px;
     border-radius: 10px;
+    -webkit-box-shadow: -1px -1px 10px 8px #f0f0f0;
+  -moz-box-shadow: -1px -1px 10px 8px #f0f0f0;
+  box-shadow: -1px -1px 10px 8px #f0f0f0;
 }
 .location_icon{
     margin:20px 10px;
