--- a/src/style/home.module.css
+++ b/src/style/home.module.css
@@ -7,3 +7,23 @@
     padding-top: 10px;
     border: 4px #f2f2f3 solid;
 }
+.location{
+    position: absolute;
+    top:220px;
+    
+    /* height: 450px; */
+    width: 350px;
+    /* background-color: aquamarine; */
+}
+.location >button{
+    height: 70px;
+    width: 70px;
+    border-radius: 40px;
+    margin-top: 10px;
+    margin-left: 40%;
+    /* border: none; */
+}
+.location >button:hover{
+    background-color: black;
+    color: white;
+}
